<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/my_gray"
            android:orientation="vertical">

            <!--IOT模块-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:src="@mipmap/home_nfc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:layout_weight="0"
                        android:text="@string/home_nfc"
                        android:textColor="@color/my_white"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:src="@mipmap/home_scan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_weight="0"
                        android:text="@string/home_sacn"
                        android:textColor="@color/my_white"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:src="@mipmap/home_take" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_weight="0"
                        android:text="@string/home_takephoto"
                        android:textColor="@color/my_white"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_weight="0"
                        android:textColor="@color/my_white" />

                </LinearLayout>

            </LinearLayout>
            <!--IOT模块-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/my_white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@mipmap/home_ffmaterial" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="0"
                            android:text="@string/home_ffmaterial"
                            android:textColor="@color/my_black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@mipmap/home_putff_pic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="0"
                            android:text="@string/home_putff"
                            android:textColor="@color/my_black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@mipmap/home_fir_his" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="0"
                            android:text="@string/home_fir_his"
                            android:textColor="@color/my_black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@mipmap/home_repair_his" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="0"
                            android:text="@string/home_repair_his"
                            android:textColor="@color/my_black"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@mipmap/home_ffmaterial" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="0"
                            android:text="@string/home_ffmaterial"
                            android:textColor="@color/my_black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@mipmap/home_ffmaterial" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="0"
                            android:text="@string/home_ffmaterial"
                            android:textColor="@color/my_black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@mipmap/home_ffmaterial" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="0"
                            android:text="@string/home_ffmaterial"
                            android:textColor="@color/my_black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@mipmap/home_ffmaterial" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="3dp"
                            android:layout_weight="0"
                            android:text="@string/home_ffmaterial"
                            android:textColor="@color/my_black"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <!--自动播放-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@color/my_white">
                <com.donglin.smartff.widget.AutoVerticalViewView
                    android:id="@+id/tb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    />


            </RelativeLayout>
            <!--统计表格-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="5dp"
                android:background="@color/my_white"
                android:orientation="vertical">


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/home_rec_org"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <lecho.lib.hellocharts.view.LineChartView
                    android:id="@+id/home_line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></lecho.lib.hellocharts.view.LineChartView>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>